# managed-mpv

./: Cargo.toml  README.md  rustfmt.toml
crates/client/: Cargo.toml
crates/client/src/: main.rs
crates/server/: Cargo.toml
src/: main.rs  mpv.rs
